# Kaggle

./: .gitignore  NLP_With_Disaster_Tweets_Pretrained_BERT.ipynb  README.md  bc_insurance_selling_v2.ipynb  notebook.ipynb  pyproject.toml  pytest.ini  requirements.txt
bagging/: bagging-with-titanic-dataset.ipynb  ensemble-ml-algorithms-bagging-boosting-voting.ipynb
binary_classification_of_insurance_selling/: bc_insurance_selling.ipynb  bc_insurance_selling_fe.ipynb  bc_insurance_selling_v2.ipynb
california_housing/: california_housing_clustering.ipynb  california_housing_kmeans.ipynb
disaster_tweets/: NLP_With_Disaster_Tweets.ipynb  NLP_With_Disaster_Tweets_Pretrained_BERT.ipynb  disaster_tweet_helpers.py  disaster_tweets.ipynb  disaster_tweets_bert.ipynb  distaster_tweets_EDA.ipynb  nlp_with_disaster_tweets_pretrained_BERT.ipynb  notebook.ipynb  output.csv  submission.csv
housing/: constants.py  helpers.py  housing_workbook.ipynb  housing_workbook_v1.ipynb  submission_v1.csv  submission_v2.csv
learning/: exercise-categorical-variables.ipynb  exercise-introduction.ipynb  exercise-pipelines.ipynb  exercise-xgboost.ipynb
lib/: jupyter_helpers.py  preprocessing.py
random_forest/: random-forest-classifier-tutorial.ipynb  random_forest.ipynb
song_popularity/: README.md  song_popularity_regression.ipynb
tech_layoffs/: tech_layoffs_eda.ipynb
tests/: test_preprocessing.py
titanic/: notebook.ipynb  submission.csv  titanic.ipynb  titanic_EDA.ipynb  titanic_age_investigation.ipynb  titanic_base.ipynb  titanic_hyperparameter_tuning.ipynb  titanic_v1.ipynb  (+1 more)
(+15 files in other folders)
