[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = ""
authors = ["Mark Barbaric <markantonybarbaric@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.1"
numpy = "^1.26.4"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"
xgboost = "^2.1.0"
tweet-preprocessor = "^0.6.0"
scipy = "^1.10.1"
nltk = "^3.8.1"
tensorflow = "^2.17.0"
keras-nlp = "^0.14.0"
keras-core = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath=['kaggle_lib/src']
testpaths = ['tests']